2009-12-13  Jan Djärv  <jan.h.d@swipnet.se>

	* xterm.c (my_log_handler): New function.
	(x_term_init): Set my_log_handler as log handler during gtk_init
	so we can filter out buggy messages. (bug #5120).

	* xterm.c (xg_scroll_callback): Parameter list changed,
	use parameter GtkScrollType to determine scroll/line/page.
	Only allow dragging if a button < 4 is grabbed (bug #5177).
	(xg_end_scroll_callback): New function.
	(x_create_toolkit_scroll_bar): Pass xg_end_scroll_callback to
	xg_create_scroll_bar.

	* gtkutil.c (xg_gtk_scroll_destroy): Remove XG_LAST_SB_DATA handling.
	(scroll_end_callback): Remove.
	(xg_create_scroll_bar): Add parameter end_callback, bind it to
	button-release-event.  Replace value-changed event with change-value,
	bug #5177,
	(xg_event_is_for_scrollbar): Only return true if button is less than 4,
	bug #5177.

	* gtkutil.h (XG_LAST_SB_DATA): Remove.
	(xg_create_scroll_bar): Add GCallback end_callback.

	* xftfont.c (QClcdfilter): New variable.
	(xftfont_open): Parse constant names for RGBA, HINT_STYLE and LCDFILTER.
	(syms_of_xftfont): Initialize QClcdfilter.

2009-12-12  Jan Djärv  <jan.h.d@swipnet.se>

	* xsettings.c (struct xsettings): Add member seen.
	(parse_xft_settings): Update member seen with what we have read.
	Return non-zero if Xft-settings have been parsed, 0 otherwise.
	(apply_xft_settings): Only update Xft settings with what member seen
	indicates as new.

2009-12-12  Eli Zaretskii  <eliz@gnu.org>

	* dispextern.h (struct text_pos): Use EMACS_INT;
	(struct glyph): Use EMACS_INT for charpos.
	(struct it): Use EMACS_INT for stop_charpos, end_charpos,
	region_beg_charpos, region_end_charpos,
	redisplay_end_trigger_charpos, and also for
	iterator_stack_entry.end_charpos and
	iterator_stack_entry.stop_charpos.

2009-12-12  Jan Djärv  <jan.h.d@swipnet.se>

	* gtkutil.c (scroll_end_callback): New function (bug #5177)
	(xg_create_scroll_bar): Call scroll_end_callback on button release
	event (bug #5177).